--- a/style.css
+++ b/style.css
@@ -3,6 +3,44 @@
 }
 
 body{
+    background-color: #7bdaf3;
     font-family: "Poppins",sans-serif;
     margin: 0;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.notes{
+    background-color: white;
+    width: 400px;
+    height: 400px;
+    margin: 20px;
+}
+
+.notes .tools{
+    background-color: #9ec862;
+    display: flex;
+    justify-content: flex-end;
+    padding: 0.5rem;
+}
+
+.notes .tools button{
+    background-color: transparent;
+    border: none;
+    color: white;
+    font-size: 1rem;
+    margin-left: 0.5rem;
+}
+
+.notes .main{
+    height: 100%;
+    width: 100%;
+}
+
+.notes textarea{
+    font-family: inherit;
+    height: 100%;
+    width: 100%;
+    border: none;
+    outline: none;
 }
