--- a/style.css
+++ b/style.css
@@ -33,7 +33,8 @@ body{
 }
 
 .notes .main{
-    display: none;
+    background-color: white;
+    overflow: hidden;
     height: 100%;
     width: 100%;
 }
@@ -44,4 +45,8 @@ body{
     width: 100%;
     border: none;
     outline: none;
+}
+
+.notes .hidden{
+    display: none;
 }
